# shopify-draft-proxy

./: .env.example  .envrc  .gitignore  .mise.toml  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  Cargo.toml  GLEAM_PORT_INTENT.md  GLEAM_PORT_LOG.md  README.md  WORKFLOW.md  astro.config.ts  build.rs  gleam.toml  manifest.toml  package.json  pnpm-lock.yaml  tsconfig.docs.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  docs.yml
benches/: proxy_paths.rs
config/: admin-graphql-bulk-query-schema.json  admin-graphql-mutation-schema.json  conformance-scenarios.json  gleam-integration-inventory.json  gleam-port-ci-gates.json  operation-registry.json  storefront-graphql-manifest.json
docs/: architecture.md  benchmarks.md  bug-mutation-log-missing-domains.md  conformance-capture.md  conformance-setup.md  endpoints  gleam-runtime.md  hard-and-weird-notes.md  helpers.md  implementation-plan.md  original-intent.md  parity-runner.md  rust-port-gleam-proxy-test-crosswalk.json  rust-port-gleam-proxy-test-crosswalk.md  shopify-admin-worklist.md  simple-demo-guide.md
elixir_smoke/: mix.exs
fixtures/: README.md
gleam/: README.md  gleam.toml  manifest.toml
js/: package.json  pnpm-lock.yaml  tsconfig.json
pending/: 2026-04-14-conformance-auth-invalid-grant.md  2026-04-15-conformance-auth-invalid-grant.md  collection-mutation-conformance-scope-blocker.md  conformance-auth-blocker.md  conformance-auth-invalid-grant-2026-04-14.md  conformance-auth-invalid-grant.md  conformance-auth-recovery-2026-04-14.md  draft-order-read-conformance-scope-blocker.md  fulfillment-lifecycle-conformance-scope-blocker.md  live-conformance-auth-blocker-2026-04-14.md  order-creation-conformance-scope-blocker.md  order-editing-conformance-scope-blocker.md  order-lifecycle-payment-customer-conformance-blocker.md  order-update-expanded-conformance-auth-blocker.md  product-mutation-conformance-scope-blocker.md  product-publication-conformance-scope-blocker.md  product-variant-compatibility-live-schema-blocker.md  shopify-conformance-auth-blocker.md
python/: Cargo.toml  README.md  pyproject.toml
python/rust/src/: lib.rs
python/src/shopify_draft_proxy/: __init__.py
python/tests/: test_smoke.py  test_transport.py
ruby/: README.md  Rakefile  shopify-draft-proxy.gemspec
ruby/native/: Cargo.toml  build.rs  extconf.rb
ruby/native/src/: lib.rs
scripts/: build-linear-issue-cache.ts  capture-abandoned-checkout-conformance.ts  capture-admin-graphql-root-operation-introspection.mts  capture-admin-graphql-schema.mts  capture-admin-node-customer-balance-node-read-conformance.ts  capture-admin-platform-backup-region-update-access-blocker.mts  capture-admin-platform-backup-region-update-extended.mts  capture-admin-platform-backup-region-update-no-region-market.mts  capture-admin-platform-backup-region-update-validation.mts  capture-admin-platform-conformance.mts  capture-admin-platform-flow-generate-signature-required-args-conformance.mts  capture-admin-platform-flow-trigger-body-schema-gaps-conformance.ts  capture-admin-platform-flow-trigger-property-size-boundary-conformance.ts  capture-admin-platform-tags-not-found-conformance.ts  capture-app-billing-conformance.ts  capture-app-revoke-access-scopes-validation-conformance.ts  capture-apps-billing-local-runtime.ts  capture-b2b-address-validation-conformance.mts  capture-b2b-assign-customer-as-contact-error-branches-conformance.mts  capture-b2b-billing-same-as-shipping-conformance.mts  capture-b2b-bulk-mutation-field-paths-conformance.mts  capture-b2b-bulk-role-assign-duplicates-conformance.mts  capture-b2b-buyer-experience-configuration-conformance.mts  capture-b2b-cold-company-location-hydration-conformance.mts  capture-b2b-companies-count-overlay-conformance.mts  capture-b2b-company-delete-deletable-check-conformance.mts  capture-b2b-company-lifecycle-conformance.mts  capture-b2b-company-location-name-fallback-conformance.mts  capture-b2b-company-location-order-aggregates-conformance.ts  capture-b2b-company-location-tax-settings-sequential-conformance.mts  capture-b2b-company-update-customer-since-conformance.mts  capture-b2b-connection-arguments-conformance.mts  capture-b2b-contact-business-rule-preconditions-conformance.mts  capture-b2b-contact-email-name-validation-conformance.mts  capture-b2b-contact-input-normalization-conformance.mts  capture-b2b-contact-location-assignment-conformance.mts  capture-b2b-contact-missing-email-validation-conformance.mts  capture-b2b-contact-removal-role-assignment-cascade-conformance.mts  capture-b2b-contact-update-customer-readback-conformance.mts  capture-b2b-external-id-validation-conformance.mts  (+856 more)
src/: admin_graphql.rs  app.ts  config.ts  graphql.rs  graphql_catalog.rs  index.ts  json-schemas.ts  lib.rs  logger.ts  node_resolver_inventory.rs  operation_registry.rs  operation_registry_data.rs  proxy-instance.ts  proxy.rs  resolver_registry.rs  search-query-parser.ts  server.ts  shopify_draft_proxy.gleam  storefront_graphql.rs  upstream.rs
test/: parity_corpus_test.gleam  parity_test.gleam  shopify_draft_proxy_test.gleam
tests/: collection_membership_hydration.rs  discount_entitlement_connections.rs  graphql_arguments.rs  graphql_routes.rs  meta_routes.rs  node_resolver_inventory.rs  operation_registry.rs  product_handle_lifecycle.rs  product_set_hydration.rs
(+7862 files in other folders)
