[package]
name = "shopify-draft-proxy"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust runtime for the Shopify Admin GraphQL digital twin / draft proxy"

[lib]
name = "shopify_draft_proxy"
path = "src/lib.rs"

[dependencies]
async-graphql = { version = "=7.0.17", default-features = false, features = ["dynamic-schema"] }
async-graphql-parser = "=7.0.17"
# Native-language consumers resolve the root crate without this lockfile. Keep
# async-graphql's semver-compatible internal value crate on the same release.
async-graphql-value = "=7.0.17"
futures-executor = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
graphql-parser = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
url = "2"
regex = "1"
base64 = "0.22"
md5 = "0.7"
sha2 = "0.10"
liquid = "0.26.11"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1"

[build-dependencies]
serde_json = "1"

[[bench]]
name = "proxy_paths"
harness = false
