[package]
name = "shopify-draft-proxy"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust runtime for the Shopify Admin GraphQL digital twin / draft proxy"

[lib]
name = "shopify_draft_proxy"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
graphql-parser = "0.4"
isocountry = "0.3.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
url = "2"
regex = "1"
base64 = "0.22"
md5 = "0.7"
sha2 = "0.10"
liquid = "0.26.11"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1"

[[bench]]
name = "proxy_paths"
harness = false
