[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "shopify-draft-proxy"
version = "0.1.0"
description = "Python bindings for the Shopify Admin GraphQL draft proxy Rust runtime"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Airhorns" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "shopify_draft_proxy._native"
python-source = "src"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
