[package]
name = "shopify-draft-proxy-ruby"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "shopify_draft_proxy_native"
crate-type = ["cdylib"]

[dependencies]
magnus = "0.8"
# magnus 0.8 does not wrap rb_ext_ractor_safe, so we call it through the raw
# rb-sys FFI in init. rb-sys is already resolved transitively via magnus; the
# `>=0.9.113` floor matches magnus's own bound so the bindings are one generation.
rb-sys = ">=0.9.113"
serde_json = "1"
shopify-draft-proxy = { path = "../.." }
