[package]
name = "shopify-draft-proxy-ruby"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "shopify_draft_proxy_native"
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8", features = ["rb-sys"] }
rb-sys = "*"
serde_json = "1"
shopify-draft-proxy = { path = "../.." }

[build-dependencies]
rb-sys-env = "0.2"
